fixing merge conflicts

--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
     "eslint-plugin-react": "^7.21.4",
     "history": "^5.0.0",
     "i18next": "^19.8.2",
+    "jquery": "^3.6.0",
     "jss": "^10.4.0",
     "lodash-es": "^4.17.21",
     "node-sass": "^4.14.1",
     "prop-types": "^15.7.2",
     "react": "^16.14.0",
+    "react-coverflow": "^0.2.20",
     "react-dom": "^16.14.0",
     "react-i18next": "^11.7.3",
     "react-icomoon": "^2.2.4",
+    "react-particles-js": "^3.4.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.3",
     "react-spring": "^8.0.27",
+    "react-use-media-query-hook": "0.0.1",
+    "react-vertical-timeline-component": "^3.3.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0"
